--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,12 @@
 			<version>3.2.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
+			<version>1.6.2</version> <!-- Use the latest version available -->
+		</dependency>
+
 
 
 	</dependencies>
