--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,14 @@
 			<version>4.5.13</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.github.penggle</groupId>
+			<artifactId>kaptcha</artifactId>
+			<version>2.3.2</version>
+		</dependency>
+
 	</dependencies>
+
 
 	<build>
 		<finalName>TapHoaSo</finalName>
