--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -24,5 +24,11 @@
         <param-value>YOUR_PASSWORD</param-value>
     </context-param>
 
+<!--    <session-config>-->
+<!--        <cookie-config>-->
+<!--            <http-only>true</http-only>-->
+<!--            <secure>true</secure>-->
+<!--        </cookie-config>-->
+<!--    </session-config>-->
 
 </web-app>
